--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@ body {
   border-radius: 50%;
   z-index: 1000;
 }
+.clock.active::before {
+  background-color: #091921;
+}
 .clock .hour,
 .clock .min,
 .clock .sec {
