--- a/css/style.css
+++ b/css/style.css
@@ -140,12 +140,12 @@ body.active {
 .digital-clock {
   font-family: sans-serif;
   font-size: 3em;
-  color: #e0e0e0;
+  color: #fff;
   position: relative;
   display: none;
 }
 .digital-clock.active {
-  color: #091921;
+  color: #000;
 }
 
 /* .digital-clock :nth-child(1) {
